# kStats

./: CMakeLists.txt  LICENSE  README.md  global.h  main.cpp  main.mm
controller/: battery_controller.cpp  battery_controller.h  cpu_controller.cpp  cpu_controller.h  cpu_device.cpp  cpu_device.h  fan_controller.cpp  fan_controller.h  generic_class.cpp  generic_class.h  generic_device.cpp  generic_device.h  generic_peripheral.mm  kStat_controller.h  kStat_controller.mm  kStatsController.h  kStatsController.mm  network_controller.cpp  network_controller.h  network_speed.cpp  network_speed.h  peripherals_controller.h  peripherals_controller.mm  smc.cpp  smc.h  volume_storage_controller.h  volume_storage_controller.mm
controller/Battery/: battery_controller.cpp  battery_controller.h
controller/CPU/: cpu_device.cpp  cpu_device.h
controller/Fan/: fan_controller.cpp  fan_controller.h
controller/GPU/: gpu_device.h  gpu_device.mm
controller/Generic/: generic_class.h  generic_device.cpp  generic_device.h
controller/Network/: network_controller.cpp  network_controller.h  network_speed.cpp  network_speed.h
controller/Peripherals/: generic_peripheral.h  iokit_libraries.h  peripherals_controller.h  peripherals_controller.mm  volume_storage_controller.h  volume_storage_controller.mm
controller/Utils/: keys.h  knownSMCKeys.txt  threadPool.cpp  threadPool.h  utils.h  utilsConverter.h
model/: kStats_model.h  kStats_model.mm  smc.cpp
model/Battery/: battery_model.cpp  battery_model.h
model/CPU/: cpu_model.cpp  cpu_model.h
model/Fan/: fan_model.cpp  fan_model.h
model/GPU/: gpu_device.h  gpu_device.mm
model/Generic/: generic_class.cpp  generic_class.h  generic_device.cpp  generic_device.h
model/Main Device/: MainDeviceModel.cpp  MainDeviceModel.h
model/Network/: network_model.cpp  network_model.h  network_speed.cpp  network_speed.h
model/Peripherals/: generic_peripheral.h  generic_peripheral.mm  peripherals_model.h  peripherals_model.mm  volume_storage_model.h  volume_storage_model.mm
model/RAM/: ram_model.cpp  ram_model.h
model/Utils/: SMCKeysMb2019  threadPool.cpp  threadPool.h
view/: animation.h  kStats_view.h  kStats_view.mm  qt_libraries.h  resources.qrc
view/images/: kStats_view.h  resources.qrc
